...
                Button {
                    navigationManager.navigate(to: .newCard)
                } label: {
                    Image(systemName: "barcode.viewfinder")
                }
                .foregroundColor(.accent)
                .accessibilityIdentifier("addCardButton")
                .accessibilityLabel("Add Card")
            }
        }
        .onScrollGeometryChange(for: CGFloat.self) { geometry in
            geometry.contentOffset.y
        } action: { _, newValue in
            withAnimation(.easeInOut(duration: 0.3)) {
...
